[tool.poetry]
name = "sputter"
version = "0.1.0"
description = "Spatial statistics analysis of putting make/miss data."
authors = ["Galen Vincent"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
